Fri Nov  7 00:51:59 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/INET_Addr.cpp:
          Added #ifdef around IPV6 specific code to remove errors on
          platforms where AV_INET6 is not defined.  Changed and instance
          of ACE_OS_String to ACE_OS.

        * ace/Sock_Connect.cpp:
          Added #ifdef around IPV6 specific code to remove errors on
          platforms where AV_INET6 is not defined.

        * ace/os_include/sys/os_resource.h:
          Added #includes of sys/syscall.h and sys/systemino.h if
          ACE_HAS_SYSCALL_H and ACE_HAS_SYSINFO are defined respectively.
          This should clear up errors on HPUX.

        * examples/IOStream/server/iostream_server.cpp:
          Added #include of Signal.h.

Thu Nov  6 17:04:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/INET_Addr.cpp (set_address): 
 
	  Applied patches from Bryan Buesker which basically just changes
	  the semantics of ACE_INET_Addr::set_address when map is set to
	  1. Previously, if map was non-zero, len was 4, and the  type was
	  already set to AF_INET for the ACE_INET_Addr, then the address
	  would not be set to an IPv4-mapped IPv6 address. It is probably
	  more desirable for the map argument to force the  address to be
	  an IPv4  mapped IPv6 address in this case (regardless of the
	  current type of  the address). 

Thu Nov  6 17:57:10 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/OS_Log_Msg_Attributes.h:
        * ace/Basic_Types.h:
          Moved #include config-all.h outside header guard to avoid circular
          include problem due to including OS_main.h in config-all.h on
          Windows.

        * ace/Base_Thread_Adapter.h:
        * ace/Cleanup.h:
        * ace/Global_Macros.h:
        * ace/OS_Dirent.h:
        * ace/OS_Errno.h:
        * ace/OS_Log_Msg_Attributes.h:
        * ace/OS_Memory.h:
        * ace/OS_NS_Thread.h:
        * ace/OS_QoS.h:
        * ace/OS_String.h: