@@ -18,7 +18,7 @@
 #ifndef _MT_CUBIT_TIMER_H
 #define _MT_CUBIT_TIMER_H
 
-#include "ace/OS.h"
+#include "ace/config-all.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
