@@ -1,3 +1,9 @@
+Fri Nov  7 02:08:17 UTC 2003  Don Hinton  <dhinton@dresystems.com>
+
+        * ace/SOCK_Dgram.i:
+          Use ACE_reinterpret_cast instead of a raw "C" style cast.  Gets
+          rid of a warning on HPUX.
+
 Fri Nov  7 00:51:59 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * ace/INET_Addr.cpp:
